name:                ghcjs-websockets-reflex
version:             0.1
synopsis:            Reflex FRP wrapper interface for GHCJS-WebSockets 
description:
license:             BSD3
license-file:        LICENSE
author:              Arie Peterson
maintainer:          ariep@xs4all.nl
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:   JavaScript.WebSockets.Reflex.WebSocket
  hs-source-dirs: src
  build-depends:
    base >= 4.8 && < 4.10,
    binary,
    bytestring,
    containers,
    dependent-map >= 0.1 && < 0.3,
    ghcjs-base >= 0.2 && < 0.3,
    lens,
    reflex >= 0.3 && < 0.6,
    reflex-dom >= 0.3 && < 0.5,
    text,
    time,
    transformers
  default-language: Haskell2010
  default-extensions:
    GeneralizedNewtypeDeriving,
    DeriveGeneric,
    RecursiveDo,
    ScopedTypeVariables,
    FlexibleContexts,
    TupleSections,
    RankNTypes
  ghc-options: -Wall

  

